Kuberneteswithistio/Code/Istio/02/demos/demo3/details-virtualservice-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: 5xx
