Kuberneteswithistio/Code/Istio/02/demos/demo3/details-virtualservice-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
    timeout: 23s
